syntax = "proto3";
package tendermint.spn.launch;

import "gogoproto/gogo.proto";
import "launch/genesis_account.proto";
import "launch/vested_account.proto";
import "launch/genesis_validator.proto";

option go_package = "github.com/tendermint/spn/x/launch/types";

message Request {
  string chainID = 1;
  uint64 requestID = 2;
  string creator = 3;
  int64 createdAt = 4;
  RequestContent content = 5 [(gogoproto.nullable) = false];
}

message RequestContent {
  oneof content {
    GenesisAccount genesisAccount = 1;
    VestedAccount vestedAccount = 2;
    GenesisValidator genesisValidator = 3;
    AccountRemoval accountRemoval = 4;
    ValidatorRemoval validatorRemoval = 5;
  }
}

message AccountRemoval {
  string address = 1;
}

message ValidatorRemoval {
  string valAddress = 1;
}
